--- a/projects/platformer/platformer.css
+++ b/projects/platformer/platformer.css
@@ -1,10 +1,14 @@
 body {
+  background-color: black;
   margin: 0px;
 }
 
 canvas {
-  background-color: lightblue;
-  margin: 20px;
+  background-size: contain;
+  background-image: url("images/background.jpg");
+  background-color: black;
+  
+  
 }
 
 img {
