--- a/style2.css
+++ b/style2.css
@@ -1,6 +1,6 @@
 html{    
     background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),
-    url(https://i.pinimg.com/originals/f3/7f/ed/f37fed439993217912c3cb1e93c719fd.png);
+    url(Cathedral.jpg);
     background-repeat:no-repeat;
     background-size:100% 100vh;
     position: relative;
@@ -11,7 +11,6 @@ body {
     padding: 10px;
     font-family: arial;
 }
-
 button{
     background-color: transparent;
     border: none;
@@ -19,6 +18,7 @@ button{
     text-align: center;
     text-decoration: none;
     font-size: 16px;
+
 }
 
 #all-contents {
@@ -42,7 +42,7 @@ button{
 
 /* navigation menu */
 nav {
-    background: #ff629d;
+    background: gray;
     position: relative;
     margin: 10px;
     display: flex;
@@ -50,6 +50,7 @@ nav {
     border-radius: 25px;
 
 }
+
 h1 {
     display: flex;
     align-items: center;
@@ -107,8 +108,7 @@ h2, h3 {
     }
 
     #portfolio li {
-        background: #55d1d0
-        ;
+        background: grey;
         padding: 10px;
         border-radius: 10px;
         margin-bottom: 10px;
