--- a/style4.css
+++ b/style4.css
@@ -1,6 +1,6 @@
-html{   
+html{    
     background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),
-    url(projects/bouncing-box/Club.webp);
+    url(https://media.wired.com/photos/6226830267cd28241b690e0a/16:9/w_1615,h_908,c_limit/Games-Elden-Ring-2.jpg);
     background-repeat:no-repeat;
     background-size:100% 100vh;
     position: relative;
@@ -9,24 +9,9 @@ html{
 body {
     color: rgb(45, 45, 45);
     padding: 10px;
-    font-family: Halogen;
-    font-kerning: auto;
+    font-family: arial;
 }
 
-@font-face {
-    font-family: Halogen;
-    src: url(/Fonts/Halogen.ttf);
-}
-
-@font-face {
-    font-family: 'Riffic-Free-Medium-Bold';
-    src:url('/Fonts/Riffic-Free-Medium-Bold.ttf.woff') format('woff'),
-        url('/Fonts/Riffic-Free-Medium-Bold.ttf.svg') format('svg'),
-        url('/Fonts/webfonts.ffonts.net.htm'),
-        url('/Fonts/Riffic-Free-Medium-Bold.ttf.eot') format('embedded-opentype'); 
-    font-weight: normal;
-    font-style: normal;
-}
 button{
     background-color: transparent;
     border: none;
@@ -45,41 +30,6 @@ button{
     animation-iteration-count: 1;
 }
 
-.cornerImage{
-    width: auto; 
-    height: 200px;
-    position: relative;
-    margin-top: 10px;
-    animation-duration: 1s;
-    animation-name: jump;
-    animation-iteration-count: infinite;
-}
-.cornerImage2{
-    width: auto; 
-    height: 200px;
-    position: relative;
-    margin-top: 10px;
-    animation-delay: 500ms;
-    animation-duration: 1s;
-    animation-name: jump;
-    animation-iteration-count: infinite;
-}
-
-@keyframes jump {
-    0% {
-        bottom: 0px;
-    }
-
-    50%{
-        bottom: 10px;
-    }
-
-    100%{
-        bottom: 0px;
-    }
-
-}
-
 @keyframes slidein {
     0% {
         margin-top: 500px;
@@ -93,7 +43,10 @@ button{
 
 /* navigation menu */
 nav {
-    background-color: pink;
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-image: url("https://cdn2.steamgriddb.com/hero_thumb/c3daacb733cbbe636db5b70ace98d520.jpg");
+    background-color: #ed8a09;
     position: relative;
     margin: 10px;
     display: flex;
@@ -124,7 +77,7 @@ a {
 /* main container area beneath menu */
 main {
     border-radius: 25px;
-    background: white;
+    background: #e1e2d6;
     display: flex;
 }
 .sidebar {
@@ -132,8 +85,9 @@ main {
     padding: 10px;
 }
 .sidebar-img {
-    margin-top: 10px;
-    width: 200px;
+
+    width: auto;
+    height: 200px;
 }
 .content {
     flex: 1;
@@ -160,7 +114,7 @@ h2, h3 {
     }
 
     #portfolio li {
-        background: #335c67;
+        background: grey;
         padding: 10px;
         border-radius: 10px;
         margin-bottom: 10px;
