--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,9 +1,21 @@
 html{    
     background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),
-    url(Cathedral.jpg);
+    url(https://i.pinimg.com/originals/f3/7f/ed/f37fed439993217912c3cb1e93c719fd.png);
     background-repeat:no-repeat;
     background-size:100% 100vh;
     position: relative;
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
 }
 
 body {
@@ -11,6 +23,7 @@ body {
     padding: 10px;
     font-family: arial;
 }
+
 button{
     background-color: transparent;
     border: none;
@@ -18,7 +31,6 @@ button{
     text-align: center;
     text-decoration: none;
     font-size: 16px;
-
 }
 
 #all-contents {
@@ -42,7 +54,7 @@ button{
 
 /* navigation menu */
 nav {
-    background: gray;
+    background: #ff629d;
     position: relative;
     margin: 10px;
     display: flex;
@@ -50,7 +62,6 @@ nav {
     border-radius: 25px;
 
 }
-
 h1 {
     display: flex;
     align-items: center;
@@ -108,7 +119,8 @@ h2, h3 {
     }
 
     #portfolio li {
-        background: grey;
+        background: #55d1d0
+        ;
         padding: 10px;
         border-radius: 10px;
         margin-bottom: 10px;
