--- a/stylesheets/style2.css
+++ b/stylesheets/style2.css
@@ -1,24 +1,44 @@
 html{    
     background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),
-    url(https://i.pinimg.com/originals/f3/7f/ed/f37fed439993217912c3cb1e93c719fd.png);
+    url("Images/Cathedral.jpg");
     background-repeat:no-repeat;
     background-size:100% 100vh;
     position: relative;
 }
 
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
 body {
     color: rgb(45, 45, 45);
     padding: 10px;
-    font-family: arial;
+    font-family:Germania;
+}
+@font-face {
+    font-family: Germania;
+    src: url(Fonts/GermaniaOne-Regular.ttf);
 }
 
 button{
+    font-family: Germania;
     background-color: transparent;
     border: none;
     color: white;
     text-align: center;
     text-decoration: none;
     font-size: 16px;
+
 }
 
 #all-contents {
@@ -42,7 +62,8 @@ button{
 
 /* navigation menu */
 nav {
-    background: #ff629d;
+    
+    background: gray;
     position: relative;
     margin: 10px;
     display: flex;
@@ -50,6 +71,7 @@ nav {
     border-radius: 25px;
 
 }
+
 h1 {
     display: flex;
     align-items: center;
@@ -107,8 +129,7 @@ h2, h3 {
     }
 
     #portfolio li {
-        background: #55d1d0
-        ;
+        background: grey;
         padding: 10px;
         border-radius: 10px;
         margin-bottom: 10px;
