--- a/stylesheets/style3.css
+++ b/stylesheets/style3.css
@@ -1,9 +1,22 @@
 html{   
     background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),
-    url(projects/bouncing-box/Club.webp);
+    url(/stylesheets/Images/Club.webp);
     background-repeat:no-repeat;
     background-size:100% 100vh;
     position: relative;
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
 }
 
 body {
@@ -28,6 +41,7 @@ body {
     font-style: normal;
 }
 button{
+    font-family: Halogen;
     background-color: transparent;
     border: none;
     color: white;
@@ -160,7 +174,7 @@ h2, h3 {
     }
 
     #portfolio li {
-        background: #335c67;
+        background: lightblue;
         padding: 10px;
         border-radius: 10px;
         margin-bottom: 10px;
