--- a/stylesheets/style5.css
+++ b/stylesheets/style5.css
@@ -1,25 +1,67 @@
-html{    
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),
-    url(https://media.wired.com/photos/6226830267cd28241b690e0a/16:9/w_1615,h_908,c_limit/Games-Elden-Ring-2.jpg);
+
+
+html{   
+    /*background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),
+    url(https://www.cyberpunk.net/build/images/social-thumbnail-en-ddcf4d23.jpg);
+    */
+    background: rgb(2,0,36);
+    background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(100,0,0,1) 100%);
     background-repeat:no-repeat;
     background-size:100% 100vh;
     position: relative;
 }
 
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+#white{
+    color: #eee;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content a {
+    font-family:Rajdhani;
+    background-color: black;
+    color: #54c1e6;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color:rgba(100,0,0,1);
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
 body {
     color: rgb(45, 45, 45);
     padding: 10px;
-    font-family: arial;
+    font-family: Rajdhani;
+}
+
+@font-face {
+    font-family: Rajdhani;
+    src: url(/Fonts/Rajdhani/Rajdhani-Medium.ttf);
 }
 
 button{
     background-color: transparent;
+    font-family: Rajdhani;
     border: none;
-    color: white;
-    text-align: center;
+    color: #54c1e6 ;
     text-decoration: none;
-    font-size: 16px;
-
 }
 
 #all-contents {
@@ -43,52 +85,89 @@ button{
 
 /* navigation menu */
 nav {
+
+    height:48px;
+    justify-content:center;
+    max-height: 70px;
+    min-width:250px;
+
+    text-align:center;
+    text-decoration:none;
+    text-transform:uppercase;
+    align-items:center;
+
     background-size:cover;
     background-repeat: no-repeat;
-    background-image: url("https://cdn2.steamgriddb.com/hero_thumb/c3daacb733cbbe636db5b70ace98d520.jpg");
-    background-color: #ed8a09;
+    background-color: black;
     position: relative;
+
+    border-top-style: solid;
+    border-top-color: black;
+    border-bottom-style: solid;
+    border-bottom-color: red;
+
     margin: 10px;
     display: flex;
-    padding: 10px;
-    border-radius: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+
 
 }
 
 h1 {
     display: flex;
     align-items: center;
-    color: white;
+    color: #54c1e6;
     flex: 1;
     margin: 0;
 }
 #nav-ul {
     list-style-image: none;
 }
+
+.nav-li:hover{
+    background-color: rgba(100,0,0,1);
+    border-color: rgba(100,0,0,1);
+    border-width: 26px;
+    border-style: solid;
+}
+
 .nav-li {
-    display: inline-block;
+    border-color: transparent;
+    border-width: 26px;
+    border-style: solid;
+    align-self: center;
+    text-decoration: none;
+    font-size: 16px;
+    display:inline-block;
     padding: 0 10px;
 }
+
 a {
     text-decoration: none;
-    color: #fff;
+    color: #54c1e6;
 }
 
 /* main container area beneath menu */
 main {
+
     border-radius: 25px;
-    background: #e1e2d6;
+    color: #54c1e6;
+    background: black;
     display: flex;
 }
 .sidebar {
     margin-right: 25px;
-    padding: 10px;
+    padding: 5px;
 }
-.sidebar-img {
 
-    width: auto;
-    height: 200px;
+.sidebar-img {
+    margin-top: 5px;
+    width: 145px;
+    height: auto;
 }
+
 .content {
     flex: 1;
     padding: 15px;
@@ -96,7 +175,12 @@ main {
 
 /* portfolio styles */
 #interests {
-    border: 4px silver ridge;
+
+    border-width: 1px;
+    border-style: solid;
+    border-color: white;
+    background-color: black;
+    color: #54c1e6;
     padding: 8px;
 }
 h2, h3 {
@@ -105,7 +189,7 @@ h2, h3 {
 
     /* portfolio styles */
     .content h1 {
-        color: black;
+        color: white    ;
     }
 
     #portfolio {
@@ -114,7 +198,7 @@ h2, h3 {
     }
 
     #portfolio li {
-        background: grey;
+        background: white;
         padding: 10px;
         border-radius: 10px;
         margin-bottom: 10px;
