--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,6 +1,6 @@
 html{    
     background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),
-    url(https://i.pinimg.com/originals/f3/7f/ed/f37fed439993217912c3cb1e93c719fd.png);
+    url("https://i.pinimg.com/originals/f3/7f/ed/f37fed439993217912c3cb1e93c719fd.png");
     background-repeat:no-repeat;
     background-size:100% 100vh;
     position: relative;
