--- a/asd-projects/walker/index.css
+++ b/asd-projects/walker/index.css
@@ -1,21 +1,38 @@
 
 body {
-  background-color: darkgreen;
+  max-width: 220vh;
+  max-height: 220vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: red;
 }
 
 #board {
-  width: 440px;
-  height: 440px;
+  left: auto;
+  position: absolute;
+  width: 200vh;
+  height: 90vh;
   border: 1px solid white;
   background-color: black;
   position: relative;
 }
 
-#gameItem {
-  background-color: teal;
-  width: 50px;
-  height: 50px;
+#walker {
+  background-color: blue;
+  width: 6vh;
+  height: 6vh;
+  border-radius: 100%;
   position: absolute;
-/*   left: 100px; */  /* Uncomment if you want to set a "starting" position */
-/*   top: 100px;  */  /* Uncomment if you want to set a "starting" position */
+  left: 0; /* Uncomment if you want to set a "starting" position */
+  top: 0;  /* Uncomment if you want to set a "starting" position */
+}
+#walker2 {
+  background-color: red;
+  width: 6vh;
+  height: 6vh;
+  border-radius: 100%;
+  position: absolute;
+  left: 0; /* Uncomment if you want to set a "starting" position */
+  top: 0;  /* Uncomment if you want to set a "starting" position */
 }
