--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -13,7 +13,7 @@ html{
 .dropdown-content {
     display: none;
     position: absolute;
-    min-width: 160px;
+    min-width: 18vh;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
@@ -34,7 +34,7 @@ button{
 }
 
 #all-contents {
-    max-width: 1000px;
+    max-width: 111vh;
     margin: auto;
     animation-duration: 2s;
     animation-name: slidein;
