--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,6 +1,6 @@
 html{    
     background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),
-    url("https://i.pinimg.com/originals/f3/7f/ed/f37fed439993217912c3cb1e93c719fd.png");
+    url("/stylesheets/Images/hatsune-miku-singing-playing-guitar-anime-girl-4k-wallpaper-uhdpaper.com-219@5@b.jpg");
     background-repeat:no-repeat;
     background-size:100% 100vh;
     position: relative;
