--- a/stylesheets/style5.css
+++ b/stylesheets/style5.css
@@ -28,7 +28,7 @@ html{
     font-family:Rajdhani;
     background-color: black;
     color: #54c1e6;
-    padding: 12px 16px;
+    padding: 1.33vh 1.778vh;
     text-decoration: none;
     display: block;
 }
@@ -41,13 +41,13 @@ html{
     display: none;
     position: absolute;
     background-color: #f1f1f1;
-    min-width: 18px;
+    min-width: 2vh;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 body {
     color: rgb(45, 45, 45);
-    padding: 10px;
+    padding: 1.11vh;
     font-family: Rajdhani;
 }
 
@@ -89,7 +89,7 @@ nav {
     height:5vh;
     justify-content:center;
     max-height: 8vh;
-    min-width:250px;
+    min-width:27.778vh;
 
     text-align:center;
     text-decoration:none;
@@ -106,16 +106,17 @@ nav {
     border-bottom-style: solid;
     border-bottom-color: red;
 
-    margin: 10px;
+    margin: 1vh;
     display: flex;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+    padding-left: 1vh;
 
 
 }
 
 h1 {
+    font-size: 100%;
     display: flex;
     align-items: center;
     color: #54c1e6;
@@ -129,19 +130,19 @@ h1 {
 .nav-li:hover{
     background-color: rgba(100,0,0,1);
     border-color: rgba(100,0,0,1);
-    border-width: 26px;
+    border-width: 2.889vh;
     border-style: solid;
 }
 
 .nav-li {
     border-color: transparent;
-    border-width: 26px;
+    border-width: 2.889vh;
     border-style: solid;
     align-self: center;
     text-decoration: none;
     font-size: 2vh;
     display:inline-block;
-    padding: 0 10px;
+    padding: 0 1vh;
 }
 
 a {
@@ -152,25 +153,25 @@ a {
 /* main container area beneath menu */
 main {
 
-    border-radius: 25px;
+    border-radius: 2.778vh;
     color: #54c1e6;
     background: black;
     display: flex;
 }
 .sidebar {
-    margin-right: 25px;
-    padding: 5px;
+    margin-right: 2.778vh;
+    padding: 0.5vh;
 }
 
 .sidebar-img {
-    margin-top: 5px;
+    margin-top: 0.5vh;
     width: 22vh;
     height: auto;
 }
 
 .content {
     flex: 1;
-    padding: 15px;
+    padding: 1.667vh;
 }
 
 /* portfolio styles */
@@ -199,9 +200,9 @@ h2, h3 {
 
     #portfolio li {
         background: white;
-        padding: 10px;
-        border-radius: 10px;
-        margin-bottom: 10px;
+        padding: 1.11vh;
+        border-radius: 1.11vh;
+        margin-bottom: 1.11vh;
     }
 
     #portfolio li:hover {
